--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100;1,9..144,100&family=Outfit:wght@100;200;300;400;500;600;700;800&family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,100;1,300;1,400;1,500;1,700&display=swap");
 $background-color: hsl(216, 12%, 8%);
 * {
   box-sizing: border-box;
@@ -7,6 +8,7 @@ $background-color: hsl(216, 12%, 8%);
 
 body {
   background: $background-color;
+  font-family: "Overpass", sans-serif;
 }
 .App {
   display: flex;
