--- a/src/sass/homesass/home.scss
+++ b/src/sass/homesass/home.scss
@@ -1,21 +1,40 @@
 $background: hsl(213, 19%, 18%);
+$background-star: lighten(hsl(213, 19%, 18%), 10%);
+$background-button: hsl(25, 97%, 53%);
 .wrap__home {
-  color: blue;
-  width: 450px;
-  height: 450px;
+  color: white;
+  width: 400px;
+  height: 370px;
   background: $background;
   border-radius: 20px;
-  padding: 20px;
+  padding: 25px;
 
   &__content {
     &__star {
       display: flex;
       justify-content: center;
       align-items: center;
-      background: hsl(216, 12%, 54%);
-      width: 40px;
-      height: 40px;
+      background: $background-star;
+      width: 45px;
+      height: 45px;
       border-radius: 20px;
+    }
+    & h1 {
+      margin-top: 25px;
+      margin-bottom: 10px;
+    }
+    & p {
+      font-weight: 100;
+      margin-bottom: 25px;
+    }
+    &__button {
+      background: $background-button;
+      color: lighten(white, 10%);
+      width: 100%;
+      padding: 15px 0px;
+      border-radius: 20px;
+      margin-top: 25px;
+      letter-spacing: 1.6px;
     }
   }
 }
