--- a/src/sass/homesass/home.scss
+++ b/src/sass/homesass/home.scss
@@ -35,6 +35,12 @@ $background-button: hsl(25, 97%, 53%);
       border-radius: 20px;
       margin-top: 25px;
       letter-spacing: 1.6px;
+      font-weight: 500;
+
+      &:hover {
+        background: white;
+        color: $background-button;
+      }
     }
   }
 }
