--- a/src/sass/resultsass/result.scss
+++ b/src/sass/resultsass/result.scss
@@ -1,15 +1,41 @@
 $background: hsl(213, 19%, 18%);
+
 .wrap__result {
   color: white;
   width: 400px;
-  height: 370px;
+  height: 390px;
   background: $background;
   border-radius: 20px;
   padding: 25px;
+  min-width: 240px;
 
   &__content {
     display: grid;
     justify-items: center;
     align-items: center;
+    &__image {
+      margin-top: 10px;
+      margin-bottom: 15px;
+    }
+    &__p p {
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      text-align: center;
+      background: lighten($background, 10%);
+      padding: 5px 14px;
+      border-radius: 15px;
+      color: hsl(25, 97%, 53%);
+      margin-bottom: 25px;
+    }
+    & h1 {
+      margin-bottom: 8px;
+    }
+    &__p2 {
+      font-weight: 100;
+      text-align: center;
+      line-height: 1.4;
+    }
   }
 }
+@import "media";
